--- a/Example/Modal/Info.plist
+++ b/Example/Modal/Info.plist
@@ -35,5 +35,7 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 	</array>
+    <key>NSCameraUsageDescription</key>
+    <string>To Test camera</string>
 </dict>
 </plist>
